<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.dbpedia</groupId>
	<artifactId>KeywordSearch</artifactId>
	<version>1.0.0</version>
	<packaging>war</packaging>
	<name>KeywordSearch</name>
	<build>
		<plugins>
			<!--Surefire - for JUnits -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.6</version>
			</plugin>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.4.0.v20161208</version>
			</plugin>
			<!--<plugin>-->
				<!--<groupId>org.springframework.boot</groupId>-->
				<!--<artifactId>spring-boot-maven-plugin</artifactId>-->
				<!--<configuration>-->
					<!--<systemProperties>-->
						<!--<JAVA_OPTS>-Xms415m -Xmx16G -XX:MaxPermSize=1G</JAVA_OPTS>-->
					<!--</systemProperties>-->
					<!--<mainClass>org.aksw.hawk.webservice.WebApplication</mainClass>-->
				<!--</configuration>-->
			<!--</plugin>-->
		</plugins>
	</build>
	<repositories>

		<repository>
			<id>mvnrepository</id>
			<name>mvnrepository</name>
			<url>http://www.mvnrepository.com/</url>
		</repository>
		<repository>
			<id>maven.aksw.snapshots</id>
			<name>AKSW Snapshot Repository</name>
			<url>http://maven.aksw.org/archiva/repository/snapshots</url>
		</repository>
		<repository>
			<id>maven.aksw.internal</id>
			<name>University Leipzig, AKSW Maven2 Repository</name>
			<url>http://maven.aksw.org/archiva/repository/internal</url>
		</repository>
	</repositories>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-queryparser -->
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>3.6.2</version>
		</dependency>

		<dependency>
			<groupId>org.aksw.qa</groupId>
			<artifactId>hawk</artifactId>
			<version>0.3.2</version>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-web-api</artifactId>
			<version>6.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- Graph database 2.2.1 -->
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j</artifactId>
			<version>2.2.10</version>
		</dependency>
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j-graph-matching</artifactId>
			<version>2.2.10</version>
		</dependency>
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j-io</artifactId>
			<version>2.2.10</version>
		</dependency>
		<!-- Used for utils like lists -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.2</version>
			<type>jar</type>
		</dependency>
		<!-- used to create and parse JSON -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.3.1</version>
		</dependency>
		<!-- Enabled Unit testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<!-- Parsing efficiently the RDF files and putting them to Elastic Search 
			Cluster -->
		<dependency>
			<groupId>org.openrdf.sesame</groupId>
			<artifactId>sesame-model</artifactId>
			<version>4.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.openrdf.sesame</groupId>
			<artifactId>sesame-rio-api</artifactId>
			<version>4.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.openrdf.sesame</groupId>
			<artifactId>sesame-rio-turtle</artifactId>
			<version>4.1.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch 
			0.90.0.Beta1 -->
		<dependency>
			<groupId>org.elasticsearch</groupId>
			<artifactId>elasticsearch</artifactId>
			<version>0.20.6</version>
		</dependency>
		<!-- Elastic Search -->
		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-codecs -->
		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-memory -->
		<dependency>
			<groupId>javax.json</groupId>
			<artifactId>javax.json-api</artifactId>
			<version>1.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.json</artifactId>
			<version>1.0.3</version>
		</dependency>
		<!-- DL-Learner used for LGG -->
		<dependency>
			<groupId>org.dllearner</groupId>
			<artifactId>components-core</artifactId>
			<version>1.3.1-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<artifactId>asm</artifactId>
					<groupId>net.minidev</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- New version for less warnings with Jetty 9 https://mvnrepository.com/artifact/org.ow2.asm/asm -->
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>5.0.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.jamonapi/jamon -->
		<dependency>
			<groupId>com.jamonapi</groupId>
			<artifactId>jamon</artifactId>
			<version>2.81</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.json-lib</groupId>
			<artifactId>json-lib</artifactId>
			<version>2.4</version>
			<classifier>jdk15</classifier>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.hp.hpl.jena/jena -->
		<dependency>
			<groupId>com.hp.hpl.jena</groupId>
			<artifactId>jena</artifactId>
			<version>2.5.5</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/de.julielab/aliasi-lingpipe -->
		<dependency>
			<groupId>de.julielab</groupId>
			<artifactId>aliasi-lingpipe</artifactId>
			<version>4.1.0</version>
		</dependency>
		<dependency>
			<groupId>edu.mit</groupId>
			<artifactId>jwi</artifactId>
			<version>2.3.3</version>
		</dependency>
		<dependency>
			<groupId>net.didion.jwnl</groupId>
			<artifactId>jwnl</artifactId>
			<version>1.4.1.RC2</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.6.0</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.6.0</version>
			<classifier>models</classifier>
		</dependency>
		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp</artifactId>
			<version>2.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.hp.hpl.jena</groupId>
			<artifactId>json-jena</artifactId>
			<version>1.0</version>
		</dependency>
	</dependencies>
</project>